<resources>
    <string name="app_name">Portfolio</string>
    <string name="spotify_label">Spotify Streamer</string>
    <string name="football_label">Football Scores</string>
    <string name="library_label">Library App</string>
    <string name="build_it_bigger_label">Build it Bigger</string>
    <string name="xyz_reader_label">XYZ Reader</string>
    <string name="capstone_label">Capstone</string>
</resources>
