<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bryanbryce.portfolio.MainActivity"
    android:background="#ECEFF1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/spotify_label"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="#455A64"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:onClick="spotifyStreamerTapped"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/football_label"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="#455A64"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:onClick="footballScoresTapped"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/library_label"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:background="#455A64"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:onClick="libraryTapped"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/build_it_bigger_label"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:background="#455A64"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:onClick="buildItBiggerTapped"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/xyz_reader_label"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:background="#455A64"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:onClick="xyzReaderTapped"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/capstone_label"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:background="#263238"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:onClick="capstoneTapped"/>

    </LinearLayout>
</RelativeLayout>
